--- a/port.html
+++ b/port.html
@@ -6,9 +6,12 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <meta http-equiv="refresh" content="0; url=port.html" />
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+     <p>Redirecting to <a href="port.html">portfolio</a>...</p>
     <!-- Header Section -->
     <div id="header">
         <div class="container">
